# LightYearsGame

./: .gitignore  CMakeLists.txt
LightYear/: CMakeLists.txt
LightYear/include/framework/: Application.h
LightYear/src/: main.cpp
LightYear/src/framework/: Application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  Core.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  Core.cpp  World.cpp
LightYearsGame/: CMakeLists.txt
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
